Br 31 implement scope annotation (#26)
* BR-36: implement Scope annotation with Singleton and Prototype

* BR-36: rename get method back

* BR-36: fix test

---------

Co-authored-by: Mykola Klushyn <mklushyn@atlassian.com>