@@ -4,13 +4,16 @@ import com.bobocode.svydovets.annotation.context.AnnotationApplicationContext;
 import com.bobocode.svydovets.annotation.exception.NoSuchBeanException;
 import com.bobocode.svydovets.annotation.exception.NoUniqueBeanException;
 import com.bobocode.svydovets.annotation.register.BeanDefinition;
+import com.bobocode.svydovets.annotation.register.BeanScope;
+import com.bobocode.svydovets.annotation.util.ObjectCloneUtils;
 
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
+import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toMap;
 
 /**
  * {@link BeanFactory} that is a part of {@link AnnotationApplicationContext} structure.
@@ -62,7 +65,7 @@ public class AnnotationBeanFactory implements BeanFactory {
 
     @Override
     public <T> T getBean(String beanName, Class<T> beanType) {
-        return Optional.ofNullable(rootContextMap.get(beanName))
+        return Optional.ofNullable(getBeanForScope(beanName, rootContextMap.get(beanName)))
                 .map(beanType::cast)
                 .orElseThrow(() -> new NoSuchBeanException("No such bean with type " + beanType.getName()));
     }
@@ -71,15 +74,13 @@ public class AnnotationBeanFactory implements BeanFactory {
     public <T> Map<String, T> getAllBeans(Class<T> beanType) {
         return rootContextMap.entrySet().stream()
                 .filter(entry -> beanType.isAssignableFrom(entry.getValue().getClass()))
-                .collect(Collectors.toMap(Map.Entry::getKey, entry -> beanType.cast(entry.getValue())));
+                .collect(toMap(Map.Entry::getKey, entry -> getBeanForScope(entry, beanType)));
     }
 
     @Override
     public <T> List<T> getBeansByType(Class<T> beanType) {
-        return rootContextMap.values().stream()
-                .filter(bean -> beanType.isAssignableFrom(bean.getClass()))
-                .map(beanType.asSubclass(beanType)::cast)
-                .collect(Collectors.toList());
+        return getAllBeans(beanType).values()
+                .stream().toList();
     }
 
     public BeanDefinition getBeanDefinition(String beanName) {
@@ -89,4 +90,24 @@ public class AnnotationBeanFactory implements BeanFactory {
     public Set<String> getBeanDefinitionNames() {
         return beanDefinitionMap.keySet();
     }
+
+    private  <T> T getBeanForScope(Map.Entry<String, Object> entry, Class<T> beanType) {
+        var beanDefinition = beanDefinitionMap.get(entry.getKey());
+        if (beanDefinition.getScope().equals(BeanScope.PROTOTYPE)) {
+            return ObjectCloneUtils.deepCopy(
+                    beanType.cast(entry.getValue()), (Class<? extends T>) beanDefinition.getBeanClass()
+            );
+        }
+        return beanType.cast(entry.getValue());
+    }
+
+    private <T> T getBeanForScope(String beanName, T bean) {
+        var beanDefinition = Optional.ofNullable(beanDefinitionMap.get(beanName))
+                .orElseThrow(() -> new NoSuchBeanException("No such bean with type " + beanName));
+        if (beanDefinition.getScope().equals(BeanScope.PROTOTYPE)) {
+            return ObjectCloneUtils.deepCopy(bean, (Class<? extends T>) beanDefinition.getBeanClass());
+        }
+        return bean;
+    }
+
 }
